feat(auth): register and login to app
fix #1 fix #2

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,8 @@
     "camelcase": "off",
     "@typescript-eslint/ban-types": "off",
     "no-use-before-define": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
