--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4",
     "yup": "^0.31.1"
   },
