--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
     "no-use-before-define": "off",
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
+    "react/jsx-curly-newline": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
