--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-modal": "^3.12.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
+    "styled-react-modal": "^2.0.1",
     "typescript": "^4.0.3",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4",
@@ -54,8 +56,10 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
+    "@types/styled-react-modal": "^1.2.0",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.9",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
